--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-      const firebaseConfig = {
+      const t = {
         apiKey: "AIzaSyCM9YxBbvGN6CAPgzD_LwcBkh7LFQb5zyY",
         authDomain: "votingsytem-8829a.firebaseapp.com",
         projectId: "votingsytem-8829a",
